# dain-assistent

./: README.md  pyproject.toml  requirenments.txt
assistent/: assistent.py
assistent/components/: gpt.py  stt.py  tts.py
